--- a/src/main/resources/templates/user/formreport.html
+++ b/src/main/resources/templates/user/formreport.html
@@ -46,7 +46,7 @@ and open the template in the editor.
                 <form class="form-inline" name="formreport" th:action="@{/daily}" method="post" id="formreport">
                     <div class="form-group">
                         <label for="tanggal">Tanggal : </label>
-                        <input class="form-control" id="date" name="tanggal" placeholder="MM/DD/YYYY" type="text"/>
+                        <input class="form-control" id="date" name="tanggal" placeholder="YYYY-MM-DD" type="text"/>
                         <!--<input class="form-control" type="text" name="tanggal" id="tanggal" title="tanggal" />-->
                     </div>
                     <div class="form-group" style="margin-left:30px;">
@@ -66,15 +66,10 @@ and open the template in the editor.
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>3/1/2017</td>
-                            <td>Desain Mock Up Aplikasi</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>3/2/2017</td>
-                            <td>Desain database Aplikasi</td>
+                        <tr th:each="report: ${report}">
+                            <td th:text="${reportStat.count}"></td>
+                            <td th:text="${report.getTanggal()}"></td>
+                            <td th:text="${report.getUraian()}"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -85,11 +80,11 @@ and open the template in the editor.
             <script type="text/javascript" th:src="@{/js/bootstrap-datepicker.min.js}"></script>
             <script th:inline="javascript">
                 $(document).ready(function () {
-                    
+
                     var date_input = $('input[name="tanggal"]'); //our date input has the name "date"
                     //var container = $('.bootstrap-iso form').length > 0 ? $('.bootstrap-iso form').parent() : "body";
                     var options = {
-                        format: 'mm/dd/yyyy',           
+                        format: 'yyyy-mm-dd',
                         todayHighlight: true,
                         autoclose: true
                     };
