--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -28,7 +28,7 @@ and open the template in the editor.
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" th:href="@{/}">Daily Report</a>
+                    <a class="navbar-brand" th:href="@{/}">Working Report</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
